# ai_experiment

./: README.md  WAIC.md  ai_2022summary.md  casual20221126.md  chatgpt_1.md  data_generation.py  federated_learning.md  federated_learning.txt  gpt.py  gpt_summary.md  material_index.md  new_tokenizer.py  parlai_tutorial.py  pyproject.toml  start_gragh4nlp.py
agent_analysis/: README.md  (+1 more)
agent_code_generation/: agent_coder.md  pyproject.toml
agent_code_generation/src/: programmer_python.py
dalianf/: README.md  assistant_investment_bot-4.py  assistant_investment_bot-5.py  assistant_ticket_bot-3.py  deliberate_techinical.py  deliberate_techinical1.py  feedback_20250803_145330.json  main.py  memory_20250803_145330.json  pyproject.toml  requirements.txt  research_report_20250720_165153.txt  research_report_20250725_162816.txt  tech_research_report_20250727_110144.txt  tech_research_report_20250727_111909.txt  tech_research_report_20250727_113056.txt  tech_research_report_20250727_164449.txt  tech_research_report_20250803_145330.txt  vanna-mysql.ipynb  vanna-mysql.py
dalianf/CASE-BLEU评估/: bleu_evaluation.py  requirements.txt
dalianf/CASE-GRPO-R1-Reasoning/: llama3_1_(8b)_grpo.py
dalianf/CASE-LangChain使用/: 1-LLMChain.ipynb  1-LLMChain.py  2-LLMChain.ipynb  2-LLMChain.py  3-LLMChain.ipynb  3-LLMChain.py  4-ConversationChain.ipynb  4-ConversationChain.py  5-product_llm.py  6-product_llm-react.py
dalianf/CASE-LangChain使用/agents/: 2-react_docstore_fund_example.py  3-self_ask_with_search_fund_example.py  4-conversational_react_description_fund_example.py  5-chat_zero_shot_react_description_fund_example.py  6-chat_conversational_react_description_fund_example.py  7-structured_chat_zero_shot_react_description_fund_example.py  8-openai_functions_fund_example.py  9-openai_multi_functions_fund_example.py
dalianf/CASE-LangChain使用/docs/: 5-product_llm说明.md  6-product_llm-react说明.md  AgentType常用类型说明.md
dalianf/CASE-Qwen-Agent-RAG/: chat_bot-1.py  chat_bot-2.py  qwen-agent-1.ipynb  qwen-agent-1.py  qwen-agent-multi-files.ipynb  qwen-agent-multi-files.py  requirements.txt
dalianf/CASE-Qwen-Agent-RAG/docs/: 1-平安商业综合责任保险（亚马逊）.txt  2-雇主责任险.txt  3-平安企业团体综合意外险.txt  4-雇主安心保.txt  5-施工保.txt  6-财产一切险.txt  7-平安装修保.txt
dalianf/CASE-Qwen-Agent-RAG/workspace/tools/code_interpreter/: kernel_connection_file_134627af-43e2-4826-80fd-e90fcf179680_48700.json  kernel_connection_file_7b76c895-e02e-4242-87f9-ad2834a72933_74736.json  (+3 more)
dalianf/CASE-Qwen2.5微调/: Qwen2_5_(7B)_Alpaca.ipynb  Qwen2_5_(7B)_Alpaca.py  Qwen2_5_Alpaca_Explanation.md
dalianf/CASE-工具链组合/: 1-simple_toolchain.py  2-simple_toolchain.py  3-lcel-demo.py
dalianf/CASE-投研报告-Qwen-Agent/: RAG问题.txt  assistant_investment_bot-1.py  assistant_investment_bot-2.py  assistant_investment_bot-5.py  coder.md  coordinator.md  planner-1.md  planner.md  project_logic.md  reporter-1.md  reporter.md  researcher.md
dalianf/CASE-投研报告-Qwen-Agent/private_data/: 投研分析框架.txt
dalianf/CASE-投顾AI助手（混合式）/: hybrid_wealth_advisor_langgraph.py
dalianf/CASE-智能投研助手（深思熟虑）/: deliberative_research_langgraph.py
dalianf/CASE-私募基金运作指引问答助手（反应式）/: fund_qa_langgraph.py
dalianf/Case-SQL-LangChain/: requirements.txt  sql_agent_deepseek.ipynb  sql_agent_deepseek.py  sql_life_insurance.ipynb  sql_life_insurance.py
dalianf/RAG-cy2/: LICENSE  README-cn.md  README.md  app_streamlit.py  dashscope-embedding-1.py  env  main.py  requirements.txt  setup.py  test1.ipynb  test1.py  运行情况.txt
dalianf/RAG-cy2/data/stock_data/: answers_qwen_turbo.json  answers_qwen_turbo_20.json  answers_qwen_turbo_20_debug.json  answers_qwen_turbo_debug.json  pdf_reports.xlsx  questions-1.json  questions.json  subset.csv
dalianf/RAG-cy2/docs/: api_request_parallel_processor_code_explanation.md  api_requests_code_explanation.md  ingestion_code_explanation.md  llm_reranking_context_relevance.md  parent_document_vector_search.md  parsed_reports_merging_code_explanation.md  pipeline_code_explanation.md  prompts_code_explanation.md  questions_processing_code_explanation.md  reranking_code_explanation.md  retrieval_code_explanation.md  src_modules_overview.md  structured_prompt_chain_of_thought.md  tables_serialization_code_explanation.md  text_splitter_code_explanation.md
dalianf/RAG-cy2/src/: api_request_parallel_processor.py  api_requests.py  ingestion.py  parsed_reports_merging.py  pdf_mineru.py  pdf_parsing.py  pipeline.py  prompts.py  questions_processing.py  reranking.py  retrieval.py  tables_serialization.py  text_splitter.py
dalianf/模型微调/: Qwen2_5_(7B)_Alpaca-2.ipynb  Qwen2_5_(7B)_Alpaca-2.py  Qwen2_5_(7B)_R1.ipynb  Qwen2_5_(7B)_R1.py  Qwen2_5_(7B)_医疗微调.ipynb  Qwen2_5_(7B)_医疗微调.py  Qwen2_5_(7B)_模型调用.ipynb  requirements.txt
deepseek_exp/: pyproject.toml
langchain_exp/: Simple_ReAct_Agent.ipynb  chat_ollama.py  custom_model_agent_tool.ipynb  dashscopt_tool_calling.py  langchain_tongyi.py  langgraph_code_assistant.py  lg_agent.ipynb  lg_agent.py  lg_agnet_ali.py  ocr_img_process.py  plan-and-execute.py  prompt_lib.py  prompts.py  pyproject.toml  qwen.py  react_chat_histoty.py  self_discovery_agent.py  signature_extraction.py  simple_basic_chatbot.py  simple_react_agent.py  skiimage_img_process.py  synthetic_data_generation.py  url_address.property  weekly_news_summary.py
langchain_exp/jiqizhixin/: generate_knowledge_graph.py  hypothesis_testing.md  interactive_knowledge_graph.html  jiqizhixin_articles.json  prompt_and_result.txt  scrapy.cfg
langchain_exp/jiqizhixin/jiqizhixin/: items.py  middlewares.py  pipelines.py  settings.py
langchain_exp/jiqizhixin/jiqizhixin/spiders/: jiqizhixin_spider.py
langchain_exp/output/: ts_intent.csv
qwen2_7b_vl/: model.py  pyproject.toml
rec_rf/: custom_env_test.py  pyproject.toml  rec_sys.py  test_custom_env.py  test_custom_gym_env.py  test_rec_sys.py  test_single_rec.py  utils.py
rec_rf/tmp/rec/: algorithm_state.pkl  rllib_checkpoint.json
(+75 files in other folders)
