[tool.poetry]
name = "agent-code-generation"
version = "0.1.0"
description = ""
authors = ["Bi Chen <878788+crazyseabiscuit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.35.7"
dashscope = "^1.20.0"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
