[project]
name = "dalianf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    # 核心依赖
    "langchain>=0.3.3",
    "langchain-community>=0.3.23",
    "openai>=1.51.2",
    "dashscope",
    "qwen-agent",
    # 数据处理
    "pandas>=1.5.3",
    "numpy>=2.2.5",
    "matplotlib>=3.10.1",
    "pydantic>=2.9.2",
    # 向量存储和嵌入
    "faiss-cpu>=1.9.0",
    "chromadb",
    # 文档处理
    # "docling>=2.14.0",  # 注释掉这一行，因为它与 jsonlines 版本冲突
    "PyPDF2>=3.0.1",
    "beautifulsoup4>=4.13.4",
    # Web和API
    "fastapi>=0.115.12",
    "gradio>=5.29.0",
    # 模型训练和优化
    "torch>=2.5.1",
    "transformers>=4.51.3",
    "datasets>=2.19.1",
    # "bitsandbytes>=0.45.4",  # 在 macOS ARM64 上不兼容
    "peft>=0.15.0",
    "trl>=0.15.2",
    # "unsloth>=2025.3.19",  # 依赖 xformers，在 macOS 上可能有构建问题
    "vllm>=0.7.0",
    # 工具和实用程序
    "tqdm>=4.66.5",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.8.0",
    "nltk>=3.8.1",
    "vanna>=0.7.9",
    "qdrant_client>=1.14.2",
    "rank-bm25>=0.2.2",
    "tabulate>=0.9.0",
    "pyprojroot>=0.3.0",
    "wandb>=0.19.11",
    "json5>=0.9.14",
    "jsonlines>=3.1.0,<4.0.0", # 修改为兼容 docling-ibm-models 的版本
    "jsonschema>=4.23.0",
    "diskcache>=5.6.3",
    "func_timeout>=4.3.5",
    "ipykernel>=6.29.5",
    "jieba>=0.42.1",
    "optimum>=1.24.0",
    "multiprocess>=0.70.16",
    "modelscope_studio>=1.2.4",
    "langgraph>=0.5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
