[tool.poetry]
name = "langchain-exp"
version = "0.1.0"
description = ""
authors = ["Bi Chen <878788+crazyseabiscuit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.0.50"
langchain-community  = "^0.2.0"
langchain-core  = "^0.2.11"
dashscope = "^1.19.2"
ipykernel = "^6.29.4"
tavily-python = "^0.3.3"
httpx = "^0.27.0"
langchain-openai = "^0.1.8"
langchain-experimental = "^0.0.62"
langchainhub = "^0.1.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
