[tool.poetry]
name = "langchain-exp"
version = "0.1.0"
description = ""
authors = ["Bi Chen <878788+crazyseabiscuit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-ollama = "^0.2.0"
langgraph = "^0.2.21"
langchainhub = "^0.1.21"
langchain-openai = "^0.2.0"
tavily-python = "^0.4.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
dashscope = "^1.20.10"
ipython = "^8.27.0"
opencv-python = "^4.10.0.84"
scipy = "^1.14.1"
scikit-image = "^0.24.0"
matplotlib = "^3.9.2"
scrapy = "^2.11.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
