[tool.poetry]
name = "rec_rf"
version = "0.1.0"
description = "A short description of your project."
authors = ["Chen <crazyseabiscuit@gmail.come>"]


[tool.poetry.dependencies]
python = "^3.10.0"
ray = {extras = ["rllib"], version = "^2.33.0"}
tensorflow = "^2.17.0"
torch = "^2.4.0"
scikit-learn = "^1.5.1"
tqdm = "^4.66.4"
matplotlib = "^3.9.1"
paretoset = "^1.2.3"
