[tool.poetry]
name = "rec_rf"
version = "0.1.0"
description = "A short description of your project."
authors = ["Chen <crazyseabiscuit@gmail.come>"]


[tool.poetry.dependencies]
python = "^3.9"
ray = {extras = ["all"], version = "^2.34.0"}
torch = "^2.4.0"
scikit-learn = "^1.5.1"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

